# jinja-rdf

./: README.md  Taskfile.yaml  doap.ttl  pyproject.toml
jinja_rdf/: __init__.py  extension.py  graph_handling.py  property.py  rdf_property.py  rdf_resource.py  resource.py  sparql_query.py
tests/: helper.py  test_property.py  test_resource.py  test_sparql.py  test_template.py
