[tool.poetry]
name = "jinja-rdf"
version = "0.1.0"
description = ""
authors = ["Natanael Arndt <arndtn@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rdflib = "^7.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
