[tool.poetry]
name = "rdflib-jinja"
version = "0.1.0"
description = ""
authors = ["Natanael Arndt <arndtn@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rdflib = "^7.0.0"
simpsons = {path = "../simpsons", develop = true}
jinja2 = "^3.1.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
