[tool.poetry]
name = "jinja-rdf"
version = "0.1.0"
description = ""
authors = ["Natanael Arndt <arndtn@gmail.com>"]
license = "EUPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rdflib = "^7.0.0"
jinja2 = "^3.1.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
simpsons-rdf = "^0.1.4"

[tool.poetry.group.dev.dependencies]
undent = "^0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
